# RSNA-2024-Lumbar-Spine-Degenerative-Classification

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Anatomy & Image Visualization Overview-RSNA RAIDS.ipynb  ExploreData.ipynb  RSNA Lumbar Metric 71549.ipynb  Test Rerun.ipynb
src/: vis_raw_data.py
